resolve some issues to test on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,10 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: var(--font-lexend);
   font-weight: 300;
